--- a/experiments/exp.yaml
+++ b/experiments/exp.yaml
@@ -5,7 +5,7 @@ data:
     name: mnist
     path: ./data
   distribution:
-    name: iid
+    name: dir
   sampling_perc: 1.0
   client_split: 0.2
   keep_test: true
@@ -30,6 +30,6 @@ logger:
   name: TensorboardLog
   log_dir: ./fluke_results
 protocol:
-  eligible_perc: 0.2
-  n_clients: 100
-  n_rounds: 5
+  eligible_perc: 0.5
+  n_clients: 7
+  n_rounds: 10
